[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://textures/player.png" type="Texture" id=2]
[ext_resource path="res://textures/heart.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.1655

[sub_resource type="Animation" id=6]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9.53674e-07, 9.53674e-07 ), Vector2( -2.27374e-13, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -115.715 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.53674e-07, 9.53674e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9.53674e-07, 9.53674e-07 ), Vector2( 2, -2 ), Vector2( 9.53674e-07, 9.53674e-07 ), Vector2( -2, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.1294, 0.0, -10.1 ]
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.53674e-07, 9.53674e-07 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/die = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -16.0
margin_right = 80.0
margin_bottom = -2.0
text = "Your Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthDisplay" type="HBoxContainer" parent="CanvasLayer"]
modulate = Color( 0.388235, 0.027451, 0.027451, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 84.0
margin_top = -16.0
margin_right = 180.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="TextureRect" parent="CanvasLayer/HealthDisplay"]
margin_right = 16.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart2" type="TextureRect" parent="CanvasLayer/HealthDisplay"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart3" type="TextureRect" parent="CanvasLayer/HealthDisplay"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart4" type="TextureRect" parent="CanvasLayer/HealthDisplay"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart5" type="TextureRect" parent="CanvasLayer/HealthDisplay"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="WordDisplay" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -6.0
margin_top = 4.0
margin_right = -3.0
margin_bottom = 18.0
grow_horizontal = 0
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitWord" type="Label" parent="CanvasLayer/WordDisplay"]
self_modulate = Color( 0, 0.0941176, 0.0156863, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 11.5
margin_top = -10.0
margin_right = 112.5
margin_bottom = 10.0
text = "'RMB' to Submit"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearWord" type="Label" parent="CanvasLayer/WordDisplay"]
self_modulate = Color( 0.317647, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -7.0
margin_right = -22.0
margin_bottom = 13.0
text = "'R' to clear"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -10.0
margin_right = 22.5
margin_bottom = 10.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathDisplay" type="Label" parent="CanvasLayer/RestartButton"]
margin_left = -5.5
margin_top = -16.0
margin_right = 55.5
margin_bottom = -2.0
text = "You Died!"
__meta__ = {
"_edit_use_anchors_": false
}
